# Cockatrice

./: .appveyor.yml  .clang-format  .cmake-format.json  .codacy.yml  .dockerignore  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .mention-bot  .travis.yml  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Dockerfile  Dockerfile.format  Doxyfile  Makefile  README.md  TODO  TODO.md  appveyor.yml  cards.xml  clangify.sh  cmakeify.sh  crystalkeep.sh  crystalkeep.txt  docker-compose.format.yml  docker-compose.yml  docker-compose.yml.windows  doxygen_style.css  format.sh  k3veed1h.poq.txt  package-lock.json  prepareMacRelease.sh  proto2cpp.py  shell.nix  sonar-project.properties  travis-compile.sh  travis-dependencies.sh  (+2 more)
cockatrice/: .qdevelop  CMakeLists.txt  Doxyfile  Makefile  clienttest.pro  cockatrice  cockatrice-cod.xml  cockatrice.aps  cockatrice.desktop  cockatrice.pro  cockatrice.qrc  cockatrice.rc  cockatrice_en@source.ts  qrc_cockatrice.cpp
cockatrice/doc/: protocol.txt
cockatrice/mime/: cockatrice-cockatrice.xml  mime.sh
cockatrice/resources/: CMakeDMGSetup.script  appicon.icns  background.eps  background.tif
cockatrice/sounds/: CMakeLists.txt
cockatrice/src/: SpoilerBackgroundUpdaterThread.cpp  SpoilerBackgroundUpdaterThread.h  abstractcarddragitem.cpp  abstractcarddragitem.h  abstractcarditem.cpp  abstractcarditem.h  abstractclient.cpp  abstractclient.h  abstractcounter.cpp  abstractcounter.h  abstractgraphicsitem.cpp  abstractgraphicsitem.h  applicationinstancemanager.cpp  applicationinstancemanager.h  arrowitem.cpp  arrowitem.h  arrowtarget.cpp  arrowtarget.h  capitalizecountername.cpp  capitalizecountername.h  carddatabase.cpp  carddatabase.h  carddatabasemodel.cpp  carddatabasemodel.h  carddragitem.cpp  carddragitem.h  cardfilter.cpp  cardfilter.h  cardframe.cpp  cardframe.h  cardinfopicture.cpp  cardinfopicture.h  cardinfotext.cpp  cardinfotext.h  cardinfowidget.cpp  cardinfowidget.h  carditem.cpp  carditem.h  cardlist.cpp  cardlist.h  (+288 more)
cockatrice/themes/: CMakeLists.txt
cockatrice/translations/: cockatrice_ang.ts  cockatrice_ca.ts  cockatrice_cs.ts  cockatrice_cz.ts  cockatrice_de.qm  cockatrice_de.ts  cockatrice_el.ts  cockatrice_en.qm  cockatrice_en.ts  cockatrice_en@lolcat.ts  cockatrice_en@pirate.ts  cockatrice_en@source.ts  cockatrice_en_US.ts  cockatrice_es.ts  cockatrice_et.ts  cockatrice_fi.ts  cockatrice_fr.ts  cockatrice_gd.ts  cockatrice_he.ts  cockatrice_hu.ts  cockatrice_id.ts  cockatrice_it.ts  cockatrice_ja.ts  cockatrice_jp.ts  cockatrice_ko.ts  cockatrice_la.ts  cockatrice_lt.ts  cockatrice_nb.ts  cockatrice_nl.ts  cockatrice_pl.ts  cockatrice_pt-br.ts  cockatrice_pt.ts  cockatrice_pt_BR.ts  cockatrice_ru.ts  cockatrice_sk.ts  cockatrice_sr.ts  cockatrice_sv.ts  cockatrice_tr.ts  cockatrice_uk.ts  cockatrice_yue.ts  (+3 more)
common/: .directory  CMakeLists.txt  abstract_deck_list_card_node.cpp  abstract_deck_list_card_node.h  abstract_deck_list_node.h  card_zones.h  color.h  common.pro  debug_pb_message.cpp  debug_pb_message.h  deck_list.cpp  deck_list.h  deck_list_card_node.h  decklist.cpp  decklist.h  expression.cpp  expression.h  featureset.cpp  featureset.h  get_pb_extension.cpp  get_pb_extension.h  getversion.cmake  inner_deck_list_node.h  main.cpp  passwordhasher.cpp  protocol.cpp  protocol.h  protocol_commands.cpp  protocol_commands.h  protocol_datastructures.cpp  protocol_datastructures.h  protocol_info.pl  protocol_item_ids.h  protocol_items.cpp  protocol_items.h  protocol_mc.pl  rng_abstract.cpp  rng_abstract.h  rng_qt.cpp  rng_qt.h  (+47 more)
common/deck_list/: deck_list.cpp  deck_list.h
common/lib/: peglib.h
common/pb/: CMakeLists.txt  admin_commands.proto  card_attributes.proto  card_ref.proto  color.proto  command_attach_card.proto  command_change_zone_properties.proto  command_concede.proto  command_create_arrow.proto  command_create_counter.proto  command_create_token.proto  command_deck_del.proto  command_deck_del_dir.proto  command_deck_download.proto  command_deck_list.proto  command_deck_new_dir.proto  command_deck_select.proto  command_deck_upload.proto  command_del_counter.proto  command_delete_arrow.proto  command_destroy_card.proto  command_draft_options_select.proto  command_draft_pick.proto  command_draft_pick_select.proto  command_draft_pick_submit.proto  command_draw_cards.proto  command_dump_zone.proto  command_flip_card.proto  command_game_say.proto  command_inc_card_counter.proto  command_inc_counter.proto  command_kick_from_game.proto  command_leave_game.proto  command_move_card.proto  command_mulligan.proto  command_next_turn.proto  command_ready_start.proto  command_replay_delete_match.proto  (+147 more)
dbconverter/: CMakeLists.txt
libcockatrice_card/: CMakeLists.txt
libcockatrice_deck_list/: CMakeLists.txt
libcockatrice_filters/: CMakeLists.txt
libcockatrice_interfaces/: CMakeLists.txt
libcockatrice_models/: CMakeLists.txt
libcockatrice_network/: CMakeLists.txt
libcockatrice_protocol/: CMakeLists.txt  protocol_version.h.in  protocol_version.json
libcockatrice_rng/: CMakeLists.txt
libcockatrice_server/: CMakeLists.txt
libcockatrice_settings/: CMakeLists.txt
libcockatrice_utility/: CMakeLists.txt
libcockatrice_utility_gui/: CMakeLists.txt
oracle/: CMakeLists.txt  oracle.desktop  oracle.pro  oracle.qrc  oracle_en@source.ts  sets.txt  sets.xml
servatrice/: CMakeLists.txt  Doxyfile  check_schema_version.sh  servatrice.aps  servatrice.desktop  servatrice.ini.example  servatrice.pro  servatrice.qrc  servatrice.sql  servertest.pro
sounds/: CMakeLists.txt  cuckoo.raw  draw.raw  end_step.raw  notification.raw  playcard.raw  player_joined.raw  shuffle.raw  start_combat.raw  tap.raw  untap.raw
tests/: CMakeLists.txt  clamped_arithmetic_test.cpp  deck_hash_performance_test.cpp  deck_hash_test.cpp  dummy_test.cpp  expression_test.cpp  intent_test.cpp  password_hash_test.cpp  server_card_counter_test.cpp  server_counter_test.cpp  single_instance_manager_test.cpp  test_age_formatting.cpp  url_scheme_event_filter_test.cpp  url_utils_test.cpp
themes/: CMakeLists.txt
zonebg/: CMakeLists.txt
(+4011 files in other folders)
